Update on demo page overflow issue

--- a/app/styles/demo.css
+++ b/app/styles/demo.css
@@ -1,3 +1,6 @@
+
+
+
 .list-unstyled > li, a.tooltip {
   padding-right: 10px;
   display: inline;
@@ -67,17 +70,41 @@ div.left-bar {
     background-color: #E5E5E5;
 }
 
-div.document-view {
-    float: left;
+div.wrapper {
+  position: relative;
+  width: 100%;
+  text-align: left;
+  white-space: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+  vertical-align: middle; 
+}
+
+.document-view {
+  display: inline-block;
+  white-space: normal;
+  text-align: center;
+}
+
+div.document {
+    /*float: left;*/
+    height: 128px;
+    /*width: 85%;*/
+    /*max-width: 800px;*/
+    overflow: scroll;
 }
 
 div.measure {
+    /*max-height: 64px;*/
     float: left;
+    display: inline;
 }
 
 div.staff {
     float: left;
     clear: both;
+    width: 100%;
+    height: 50%;
 }
 
 .panel.panel-default.shortcuts {
